--- a/cmd/config.yaml
+++ b/cmd/config.yaml
@@ -5,3 +5,5 @@ database:
     url: postgres://dengkuadong:123456@localhost/dbapp?sslmode=disable
   mysql:
     url: root:123456@tcp(localhost:3306)/go_common?parseTime=true
+  mongo:
+    url: mongodb://localhost:27017
